--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ footer a:hover {
 @media (prefers-color-scheme: dark) {
     body {
         color: #ddd;
-        background-color: #121212;
+        background-color: #fcfcfc;
     }
 
     .site-nav a,
